crates/ruff/src/rules/flake8_bandit/snapshots/ruff__rules__flake8_bandit__tests__S001_S001.py.snap
---
source: crates/ruff/src/rules/flake8_bandit/mod.rs
expression: diagnostics
---
- kind:
    BlacklistCall:
      message: "Pickle and modules that wrap it can be unsafe when used to deserialize untrusted data, possible security issue"
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 14
  fix: ~
  parent: ~
- kind:
    BlacklistCall:
      message: Telnet-related functions are being called. Telnet is considered insecure. Use SSH or some other encrypted protocol
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 23
  fix: ~
  parent: ~

