crates/ruff/src/rules/flake8_bandit/snapshots/ruff__rules__flake8_bandit__tests__S101_S101.py.snap
---
source: crates/ruff/src/rules/flake8_bandit/mod.rs
---
S101.py:2:1: S101 Use of `assert` detected
  |
2 | # Error
3 | assert True
  | ^^^^^^ S101
4 | 
5 | def fn():
  |

S101.py:8:5: S101 Use of `assert` detected
   |
 8 |     # Error
 9 |     assert x == 1
   |     ^^^^^^ S101
10 | 
11 |     # Error
   |

S101.py:11:5: S101 Use of `assert` detected
   |
11 |     # Error
12 |     assert x == 2
   |     ^^^^^^ S101
   |


