crates/ruff/src/rules/flake8_bandit/snapshots/ruff__rules__flake8_bandit__tests__S102_S102.py.snap
---
source: crates/ruff/src/rules/flake8_bandit/mod.rs
expression: diagnostics
---
- - kind:
      name: ExecBuiltin
      body: "Use of `exec` detected"
      suggestion: ~
      fixable: false
    location:
      row: 3
      column: 4
    end_location:
      row: 3
      column: 17
    fix: ~
    parent: ~
  - kind:
      name: ExecBuiltin
      body: "Use of `exec` detected"
      suggestion: ~
      fixable: false
    location:
      row: 5
      column: 0
    end_location:
      row: 5
      column: 13
    fix: ~
    parent: ~

