crates/ruff/src/rules/flake8_bandit/snapshots/ruff__rules__flake8_bandit__tests__S104_S104.py.snap
---
source: crates/ruff/src/rules/flake8_bandit/mod.rs
expression: diagnostics
---
- kind:
    name: HardcodedBindAllInterfaces
    body: Possible binding to all interfaces
    commit: ~
    fixable: false
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 9
  fix: ~
  parent: ~
- kind:
    name: HardcodedBindAllInterfaces
    body: Possible binding to all interfaces
    commit: ~
    fixable: false
  location:
    row: 10
    column: 0
  end_location:
    row: 10
    column: 9
  fix: ~
  parent: ~
- kind:
    name: HardcodedBindAllInterfaces
    body: Possible binding to all interfaces
    commit: ~
    fixable: false
  location:
    row: 14
    column: 5
  end_location:
    row: 14
    column: 14
  fix: ~
  parent: ~
- kind:
    name: HardcodedBindAllInterfaces
    body: Possible binding to all interfaces
    commit: ~
    fixable: false
  location:
    row: 18
    column: 8
  end_location:
    row: 18
    column: 17
  fix: ~
  parent: ~

