crates/ruff/src/rules/flake8_bandit/snapshots/ruff__rules__flake8_bandit__tests__S106_S106.py.snap
---
source: crates/ruff/src/rules/flake8_bandit/mod.rs
expression: diagnostics
---
- - kind:
      name: HardcodedPasswordFuncArg
      body: "Possible hardcoded password: \"s3cr3t\""
      suggestion: ~
      fixable: false
    location:
      row: 14
      column: 8
    end_location:
      row: 14
      column: 25
    fix: ~
    parent: ~

