crates/ruff/src/rules/flake8_bandit/snapshots/ruff__rules__flake8_bandit__tests__S107_S107.py.snap
---
source: crates/ruff/src/rules/flake8_bandit/mod.rs
---
./resources/test/fixtures/flake8_bandit/S107.py:5:29: S107 Possible hardcoded password: "default"
  |
5 | def default(first, password="default"):
  |                             ^^^^^^^^^ S107
6 |     pass
  |

./resources/test/fixtures/flake8_bandit/S107.py:13:45: S107 Possible hardcoded password: "posonly"
   |
13 | def default_posonly(first, /, pos, password="posonly"):
   |                                             ^^^^^^^^^ S107
14 |     pass
   |

./resources/test/fixtures/flake8_bandit/S107.py:21:39: S107 Possible hardcoded password: "kwonly"
   |
21 | def default_kwonly(first, *, password="kwonly"):
   |                                       ^^^^^^^^ S107
22 |     pass
   |

./resources/test/fixtures/flake8_bandit/S107.py:29:39: S107 Possible hardcoded password: "posonly"
   |
29 | def default_all(first, /, pos, secret="posonly", *, password="kwonly"):
   |                                       ^^^^^^^^^ S107
30 |     pass
   |

./resources/test/fixtures/flake8_bandit/S107.py:29:62: S107 Possible hardcoded password: "kwonly"
   |
29 | def default_all(first, /, pos, secret="posonly", *, password="kwonly"):
   |                                                              ^^^^^^^^ S107
30 |     pass
   |


