crates/ruff/src/rules/flake8_bandit/snapshots/ruff__rules__flake8_bandit__tests__S108_extend.snap
---
source: crates/ruff/src/rules/flake8_bandit/mod.rs
---
./resources/test/fixtures/flake8_bandit/S108.py:5:11: S108 Probable insecure usage of temporary file or directory: "/tmp/abc"
  |
5 |     f.write("def")
6 | 
7 | with open("/tmp/abc", "w") as f:
  |           ^^^^^^^^^^ S108
8 |     f.write("def")
  |

./resources/test/fixtures/flake8_bandit/S108.py:8:11: S108 Probable insecure usage of temporary file or directory: "/var/tmp/123"
   |
 8 |     f.write("def")
 9 | 
10 | with open("/var/tmp/123", "w") as f:
   |           ^^^^^^^^^^^^^^ S108
11 |     f.write("def")
   |

./resources/test/fixtures/flake8_bandit/S108.py:11:11: S108 Probable insecure usage of temporary file or directory: "/dev/shm/unit/test"
   |
11 |     f.write("def")
12 | 
13 | with open("/dev/shm/unit/test", "w") as f:
   |           ^^^^^^^^^^^^^^^^^^^^ S108
14 |     f.write("def")
   |

./resources/test/fixtures/flake8_bandit/S108.py:15:11: S108 Probable insecure usage of temporary file or directory: "/foo/bar"
   |
15 | # not ok by config
16 | with open("/foo/bar", "w") as f:
   |           ^^^^^^^^^^ S108
17 |     f.write("def")
   |


