crates/ruff/src/rules/flake8_bandit/snapshots/ruff__rules__flake8_bandit__tests__S110_typed.snap
---
source: crates/ruff/src/rules/flake8_bandit/mod.rs
expression: diagnostics
---
- kind:
    name: TryExceptPass
    body: "`try`-`except`-`pass` detected, consider logging the exception"
    commit: ~
    fixable: false
  location:
    row: 3
    column: 0
  end_location:
    row: 4
    column: 8
  fix: ~
  parent: ~
- kind:
    name: TryExceptPass
    body: "`try`-`except`-`pass` detected, consider logging the exception"
    commit: ~
    fixable: false
  location:
    row: 8
    column: 0
  end_location:
    row: 9
    column: 8
  fix: ~
  parent: ~
- kind:
    name: TryExceptPass
    body: "`try`-`except`-`pass` detected, consider logging the exception"
    commit: ~
    fixable: false
  location:
    row: 13
    column: 0
  end_location:
    row: 14
    column: 8
  fix: ~
  parent: ~

